--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Namasthey</title>
   </head>
   <body>
-    hello
+    <div id="root">not render</div>
+    <script type="modul" src="App.js"></script>
   </body>
 </html>
